# substreams-solana-hosted-store-example

./: .gitignore  CHANGELOG.md  README.md
proto/com/acme/wallet/v1/: wallet.proto
proto/sf/substreams/example/wallettracker/v1/: tracked.proto
sink/: buf.gen.yaml  cursor.go  go.mod  go.sum  main.go  run.go  store.go
substreams/: Cargo.toml  README.md  buf.yaml  substreams.yaml
substreams/src/: lib.rs
